# PromptBook

./: .gitignore  README.md  pyproject.toml
promptbook/: book_manager.py  cli.py  config.yaml  config_manager.py  git_utils.py  loader.py  processor.py  prompt-schema.json  utils.py  validator.py
promptbook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
